Initial BMP to PNG support

--- a/dxPmdxConverter.rc
+++ b/dxPmdxConverter.rc
@@ -7,7 +7,7 @@ IDI_MYICON1 ICON "wnds32.ico"
 STRINGTABLE
 MOVEABLE PURE LOADONCALL DISCARDABLE
 BEGIN
-IDS_ABOUTMSG, "dxPmdxConverter\nSimple PMD to MQO/OBJ converter.\nWritten by Dmitry Hrabrov\na.k.a. DeXPeriX"
+IDS_ABOUTMSG, "dxPmdxConverter\nSimple PMD/PMX to MQO/OBJ converter.\nWritten by Dmitry Hrabrov\na.k.a. DeXPeriX"
 IDS_SUCCESS, "Success"
 IDS_SUCMSG, "Conversion was successful."
 IDS_ERROR, "Error"
@@ -26,6 +26,7 @@ IDS_STA_WRVERTEX, "Writing output vertexes"
 IDS_STA_WRFACES, "Writing output: Faces"
 IDS_STA_CONVEND, "Converting completed"
 IDS_STA_MATNOTEX, "Texture file does not exists:"
+IDS_STA_TEXCONVERT, "Converting textures from BMP to PNG:"
 IDS_STA_SPH, "Dynamic texture. Will be displayed incorrectly:"
 END
 
@@ -39,9 +40,9 @@ BEGIN
   CONTROL "Please, choose a file...",IDC_INPUTEDIT,"EDIT",ES_READONLY|ES_LEFT|WS_CHILD|WS_BORDER|WS_TABSTOP|WS_VISIBLE|WS_DISABLED ,40,5,160,14
   CONTROL "Choose",IDC_CHOOSEBUTTON,"BUTTON",BS_DEFPUSHBUTTON|BS_VCENTER|BS_CENTER|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,205,5,50,14
   CONTROL "Output:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,24,24,8
-  CONTROL "MQO",IDC_RADIOMQO,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,35,24,28,10
-  CONTROL "OBJ",IDC_RADIOOBJ,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,65,24,27,10
-  CONTROL "Additional checks",IDC_ADDCHECK,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,110,24,70,10
+  CONTROL "OBJ",IDC_RADIOOBJ,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,40,24,27,10
+  CONTROL "MQO",IDC_RADIOMQO,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,70,24,27,10
+  CONTROL "Textures BMP->PNG",IDC_TEXCONVERT,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,110,24,76,10
   CONTROL "",IDC_COMBOPREC,"COMBOBOX",CBS_DROPDOWNLIST|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,230,23,24,13
   CONTROL "Precision:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,195,25,30,8
   CONTROL "",IDC_PROGRESSBAR,"msctls_progress32",WS_CHILD|WS_VISIBLE ,5,39,194,16
@@ -54,7 +55,7 @@ LANGUAGE LANG_RUSSIAN, 1
 STRINGTABLE
 MOVEABLE PURE LOADONCALL DISCARDABLE
 BEGIN
-IDS_ABOUTMSG, "dxPmdxConverter\nПростой конвертер PMD в MQO/OBJ.\nАвтор: Храбров Дмитрий\na.k.a. DeXPeriX"
+IDS_ABOUTMSG, "dxPmdxConverter\nПростой конвертер\nPMD/PMX в MQO/OBJ.\nАвтор: Храбров Дмитрий\na.k.a. DeXPeriX"
 IDS_SUCCESS, "Успех"
 IDS_SUCMSG, "Конвертирование прошло успешно."
 IDS_ERROR, "Ошибка"
@@ -73,6 +74,7 @@ IDS_STA_WRVERTEX, "Запись геометрии"
 IDS_STA_WRFACES, "Запись: индексы"
 IDS_STA_CONVEND, "Конвертирование завершено"
 IDS_STA_MATNOTEX, "Файл текстуры не существует:"
+IDS_STA_TEXCONVERT, "Конвертирование текстур из BMP в PNG:"
 IDS_STA_SPH, "Динамические текстуры. Будут отображены некорректно:"
 END
 
@@ -86,10 +88,10 @@ BEGIN
   CONTROL "На входе:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,7,35,8
   CONTROL "Пожалуйста, выберите файл...",IDC_INPUTEDIT,"EDIT",ES_READONLY|ES_LEFT|WS_CHILD|WS_BORDER|WS_TABSTOP|WS_VISIBLE|WS_DISABLED ,41,5,159,14
   CONTROL "Выбрать",IDC_CHOOSEBUTTON,"BUTTON",BS_DEFPUSHBUTTON|BS_VCENTER|BS_CENTER|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,205,5,50,14
-  CONTROL "Формат:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,24,30,8
-  CONTROL "MQO",IDC_RADIOMQO,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,40,24,28,10
-  CONTROL "OBJ",IDC_RADIOOBJ,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,72,24,27,10
-  CONTROL "Доп. проверки",IDC_ADDCHECK,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,117,24,70,10
+  CONTROL "Формат:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,25,30,8
+  CONTROL "OBJ",IDC_RADIOOBJ,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,40,25,27,8
+  CONTROL "MQO",IDC_RADIOMQO,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,70,25,27,8
+  CONTROL "Текстуры BMP->PNG",IDC_TEXCONVERT,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,105,25,82,8
   CONTROL "",IDC_COMBOPREC,"COMBOBOX",CBS_DROPDOWNLIST|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,230,23,24,13
   CONTROL "Точность:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,193,25,34,8
   CONTROL "",IDC_PROGRESSBAR,"msctls_progress32",WS_CHILD|WS_VISIBLE ,5,39,194,16
