--- a/dxPmdxConverter.cbp
+++ b/dxPmdxConverter.cbp
@@ -11,10 +11,20 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="House.pmx" />
+				<Option parameters="House.pmx -b gol.bmp" />
 				<Compiler>
+					<Add option="-ansi" />
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-Wl,--stack=0x1000000" />
+					<Add option="-Wl,--heap=0x1000000" />
+					<Add library="kernel32" />
+					<Add library="user32" />
+					<Add library="comdlg32" />
+					<Add library="shell32" />
+					<Add library="gcc" />
+				</Linker>
 			</Target>
 			<Target title="win32">
 				<Option output="bin/win32/dxPmdxConverter" prefix_auto="1" extension_auto="1" />
@@ -26,6 +36,7 @@
 					<Add option="-pedantic" />
 					<Add option="-Wextra" />
 					<Add option="-Wall" />
+					<Add option="-ansi" />
 					<Add option="-DWINAPIONLY" />
 					<Add option="-DUSEWINGUI" />
 				</Compiler>
@@ -42,7 +53,7 @@
 				</Linker>
 			</Target>
 			<Target title="win64">
-				<Option output="bin/win64/dxPmdxConverter.win64" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/win64/dxPmdxConverter" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/win64/" />
 				<Option type="0" />
 				<Option compiler="x64_gnu_gcc_compiler" />
@@ -51,6 +62,7 @@
 					<Add option="-pedantic" />
 					<Add option="-Wextra" />
 					<Add option="-Wall" />
+					<Add option="-ansi" />
 					<Add option="-DWINAPIONLY" />
 					<Add option="-DUSEWINGUI" />
 				</Compiler>
@@ -77,26 +89,11 @@
 					<Add option="-pedantic" />
 					<Add option="-Wextra" />
 					<Add option="-Wall" />
+					<Add option="-ansi" />
+					<Add option="-DUSEWINGUI" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="kernel32" />
-					<Add library="user32" />
-					<Add library="comctl32" />
-					<Add library="comdlg32" />
-				</Linker>
-			</Target>
-			<Target title="crink32">
-				<Option output="bin/crink32/dxPmdxConverter" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/crink32/" />
-				<Option type="0" />
-				<Option compiler="crinklervc" />
-				<Compiler>
-					<Add option="/DWINAPIONLY" />
-				</Compiler>
-				<Linker>
-					<Add option="/ENTRY:smain" />
-					<Add option="/HASHSIZE:1" />
 					<Add library="kernel32" />
 					<Add library="user32" />
 					<Add library="comctl32" />
@@ -159,11 +156,13 @@
 				<Option object_output="obj/win32console/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="-b t013.bmp" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add option="-pedantic" />
 					<Add option="-Wextra" />
 					<Add option="-Wall" />
+					<Add option="-ansi" />
 					<Add option="-DWINAPIONLY" />
 				</Compiler>
 				<Linker>
@@ -198,6 +197,7 @@
 					<Add option="-pedantic" />
 					<Add option="-Wextra" />
 					<Add option="-Wall" />
+					<Add option="-ansi" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -207,6 +207,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="bmpconvert.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="bmpconvert.h" />
 		<Unit filename="dxFileIO.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -216,7 +220,6 @@
 			<Option target="win32" />
 			<Option target="win64" />
 			<Option target="std32win" />
-			<Option target="crink32" />
 			<Option target="win32vc" />
 			<Option target="clang32" />
 			<Option target="Debug" />
@@ -233,7 +236,6 @@
 			<Option target="win32" />
 			<Option target="win64" />
 			<Option target="std32win" />
-			<Option target="crink32" />
 			<Option target="win32vc" />
 			<Option target="clang32" />
 			<Option target="Debug" />
@@ -251,7 +253,6 @@
 			<Option target="win32" />
 			<Option target="win64" />
 			<Option target="std32win" />
-			<Option target="crink32" />
 			<Option target="win32vc" />
 			<Option target="clang32" />
 		</Unit>
@@ -260,7 +261,6 @@
 			<Option target="win32" />
 			<Option target="win64" />
 			<Option target="std32win" />
-			<Option target="crink32" />
 			<Option target="win32vc" />
 			<Option target="clang32" />
 		</Unit>
