--- a/dxPmdxConverter.rc
+++ b/dxPmdxConverter.rc
@@ -7,7 +7,6 @@ IDI_MYICON1 ICON "wnds32.ico"
 STRINGTABLE
 MOVEABLE PURE LOADONCALL DISCARDABLE
 BEGIN
-IDS_ABOUTMSG, "dxPmdxConverter\nSimple PMD/PMX to MQO/OBJ converter.\nWritten by Dmitry Hrabrov\na.k.a. DeXPeriX"
 IDS_SUCCESS, "Success"
 IDS_SUCMSG, "Conversion was successful."
 IDS_ERROR, "Error"
@@ -50,12 +49,30 @@ BEGIN
   CONTROL "",IDC_LOGRICH,"RichEdit",WS_CHILD|WS_BORDER|WS_VSCROLL|WS_TABSTOP|WS_VISIBLE|0x844,5,59,250,61
 END
 
+IDD_ABOUTDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0, 0, 189, 129
+STYLE DS_FIXEDSYS |DS_SETFONT |DS_MODALFRAME |DS_CENTER |WS_POPUP |WS_VISIBLE |WS_SYSMENU |WS_CAPTION
+CAPTION "About"
+FONT 8, "Ms Shell Dlg"
+BEGIN
+  CONTROL "dxPmdxConverter",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,4,140,8
+  CONTROL "Simple PMD/PMX to OBJ/MQO converter.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,15,140,8
+  CONTROL "Icon",IDC_ICONPIC,"STATIC",SS_REALSIZEIMAGE |SS_CENTERIMAGE |SS_ICON |WS_CHILD |WS_VISIBLE ,5,8,32,32
+  CONTROL "Author: Dmitry Hrabrov a.k.a. DeXPeriX",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,25,140,8
+  CONTROL "https://github.com/DeXP/dxPmdxConverter",IDC_GITLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,36,140,8
+  CONTROL "Q: Do I need 'Textures BMP->PNG' on?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,52,177,8
+  CONTROL "A: This option may fix some transparency issues.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,63,177,8
+  CONTROL "Q: What is 'Precision'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,79,177,8
+  CONTROL "A: The number of decimal places.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,89,177,8
+  CONTROL "Made especially for:",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,105,125,8
+  CONTROL "http://OneMangaDay.dexp.in/tutorials/",IDC_TUTLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,114,125,8
+  CONTROL "OK",IDC_AOKBUT,"BUTTON",BS_DEFPUSHBUTTON |BS_VCENTER |BS_CENTER |WS_CHILD |WS_TABSTOP |WS_VISIBLE ,135,110,50,14
+END
 
-LANGUAGE LANG_RUSSIAN, 1
+
+LANGUAGE LANG_FRENCH, 1
 STRINGTABLE
 MOVEABLE PURE LOADONCALL DISCARDABLE
 BEGIN
-IDS_ABOUTMSG, "dxPmdxConverter\nПростой конвертер\nPMD/PMX в MQO/OBJ.\nАвтор: Храбров Дмитрий\na.k.a. DeXPeriX"
 IDS_SUCCESS, "Успех"
 IDS_SUCMSG, "Конвертирование прошло успешно."
 IDS_ERROR, "Ошибка"
@@ -78,11 +95,11 @@ IDS_STA_TEXCONVERT, "Конвертирование текстур из BMP в PNG:"
 IDS_STA_SPH, "Динамические текстуры. Будут отображены некорректно:"
 END
 
-LANGUAGE LANG_RUSSIAN, 1
+LANGUAGE LANG_FRENCH, 1
 IDD_MAINDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0, 0, 260, 125
 STYLE DS_FIXEDSYS|DS_SETFONT|DS_CENTER|WS_POPUP|WS_VISIBLE|WS_SYSMENU|WS_CAPTION
 EXSTYLE WS_EX_CONTEXTHELP|WS_EX_ACCEPTFILES
-CAPTION "dxPmdxConverter"
+CAPTION "dxPmdxConverter 1.0"
 FONT 8, "Ms Shell Dlg"
 BEGIN
   CONTROL "На входе:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,7,35,8
@@ -99,3 +116,22 @@ BEGIN
   CONTROL "",IDC_LOGRICH,"RichEdit",WS_CHILD|WS_BORDER|WS_VSCROLL|WS_TABSTOP|WS_VISIBLE|0x844,5,59,250,61
 END
 
+LANGUAGE LANG_FRENCH, 1
+IDD_ABOUTDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0, 0, 189, 129
+STYLE DS_FIXEDSYS |DS_SETFONT |DS_MODALFRAME |DS_CENTER |WS_POPUP |WS_VISIBLE |WS_SYSMENU |WS_CAPTION
+CAPTION "О программе"
+FONT 8, "Ms Shell Dlg"
+BEGIN
+  CONTROL "dxPmdxConverter",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,4,140,8
+  CONTROL "Конвертер PMD/PMX в OBJ/MQO.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,15,140,8
+  CONTROL "Icon",IDC_ICONPIC,"STATIC",SS_REALSIZEIMAGE |SS_CENTERIMAGE |SS_ICON |WS_CHILD |WS_VISIBLE ,5,8,32,32
+  CONTROL "Автор: Храбров Дмитрий a.k.a. DeXPeriX",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,25,140,8
+  CONTROL "https://github.com/DeXP/dxPmdxConverter",IDC_GITLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,36,140,8
+  CONTROL "В: Когда включать 'Текстуры BMP->PNG'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,52,177,8
+  CONTROL "A: Когда есть проблемы с прозрачностью.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,63,177,8
+  CONTROL "Q: Что такое 'Точность'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,79,177,8
+  CONTROL "A: Количество знаков после запятой.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,89,177,8
+  CONTROL "Сделано специально для:",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,105,125,8
+  CONTROL "http://OneMangaDay.dexp.in/tutorials/",IDC_TUTLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,114,125,8
+  CONTROL "OK",IDC_AOKBUT,"BUTTON",BS_DEFPUSHBUTTON |BS_VCENTER |BS_CENTER |WS_CHILD |WS_TABSTOP |WS_VISIBLE ,135,110,50,14
+END
