--- a/dxPmdxConverter.rc
+++ b/dxPmdxConverter.rc
@@ -27,12 +27,13 @@ IDS_STA_CONVEND, "Converting completed"
 IDS_STA_MATNOTEX, "Texture file does not exists:"
 IDS_STA_TEXCONVERT, "Converting textures from BMP to PNG:"
 IDS_STA_SPH, "Dynamic texture. Will be displayed incorrectly:"
+IDS_STA_ARCHIVEEND, "Archiving completed"
 END
 
 IDD_MAINDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0,0,260,125
 STYLE DS_FIXEDSYS|DS_SETFONT|DS_CENTER|WS_POPUP|WS_VISIBLE|WS_SYSMENU|WS_CAPTION
 EXSTYLE WS_EX_CONTEXTHELP|WS_EX_ACCEPTFILES
-CAPTION "dxPmdxConverter"
+CAPTION "dxPmdxConverter 1.1"
 FONT 8, "Ms Shell Dlg"
 BEGIN
   CONTROL "Input file:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,7,35,8
@@ -41,7 +42,8 @@ BEGIN
   CONTROL "Output:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,24,24,8
   CONTROL "OBJ",IDC_RADIOOBJ,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,40,24,27,10
   CONTROL "MQO",IDC_RADIOMQO,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,70,24,27,10
-  CONTROL "Textures BMP->PNG",IDC_TEXCONVERT,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,110,24,76,10
+  CONTROL "BMP->PNG",IDC_TEXCONVERT,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,105,25,48,8
+  CONTROL "TGZ",IDC_DOARCHIVE,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,162,25,28,8
   CONTROL "",IDC_COMBOPREC,"COMBOBOX",CBS_DROPDOWNLIST|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,230,23,24,13
   CONTROL "Precision:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,195,25,30,8
   CONTROL "",IDC_PROGRESSBAR,"msctls_progress32",WS_CHILD|WS_VISIBLE ,5,39,194,16
@@ -49,7 +51,7 @@ BEGIN
   CONTROL "",IDC_LOGRICH,"RichEdit",WS_CHILD|WS_BORDER|WS_VSCROLL|WS_TABSTOP|WS_VISIBLE|0x844,5,59,250,61
 END
 
-IDD_ABOUTDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0, 0, 189, 129
+IDD_ABOUTDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0, 0, 189, 151
 STYLE DS_FIXEDSYS |DS_SETFONT |DS_MODALFRAME |DS_CENTER |WS_POPUP |WS_VISIBLE |WS_SYSMENU |WS_CAPTION
 CAPTION "About"
 FONT 8, "Ms Shell Dlg"
@@ -59,17 +61,20 @@ BEGIN
   CONTROL "Icon",IDC_ICONPIC,"STATIC",SS_REALSIZEIMAGE |SS_CENTERIMAGE |SS_ICON |WS_CHILD |WS_VISIBLE ,5,8,32,32
   CONTROL "Author: Dmitry Hrabrov a.k.a. DeXPeriX",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,25,140,8
   CONTROL "https://github.com/DeXP/dxPmdxConverter",IDC_GITLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,36,140,8
-  CONTROL "Q: Do I need 'Textures BMP->PNG' on?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,52,177,8
+  CONTROL "Q: Do I need 'BMP->PNG' checked on?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,52,177,8
   CONTROL "A: This option may fix some transparency issues.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,63,177,8
-  CONTROL "Q: What is 'Precision'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,79,177,8
-  CONTROL "A: The number of decimal places.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,89,177,8
-  CONTROL "Made especially for:",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,105,125,8
-  CONTROL "http://OneMangaDay.dexp.in/tutorials/",IDC_TUTLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,114,125,8
-  CONTROL "OK",IDC_AOKBUT,"BUTTON",BS_DEFPUSHBUTTON |BS_VCENTER |BS_CENTER |WS_CHILD |WS_TABSTOP |WS_VISIBLE ,135,110,50,14
+  CONTROL "Q: What is 'TGZ'? Results archiever?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,79,177,8
+  CONTROL "A: Tar.gz archive. Can be opened in 7-Zip etc.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,89,177,8
+  CONTROL "Q: What is 'Precision'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,105,177,8
+  CONTROL "A: The number of decimal places.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,115,177,8
+  CONTROL "Made especially for:",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,131,125,8
+  CONTROL "http://OneMangaDay.dexp.in/tutorials/",IDC_TUTLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,141,125,8
+  CONTROL "OK",IDC_AOKBUT,"BUTTON",BS_DEFPUSHBUTTON |BS_VCENTER |BS_CENTER |WS_CHILD |WS_TABSTOP |WS_VISIBLE ,135,131,50,14
 END
 
 
-LANGUAGE LANG_FRENCH, 1
+
+LANGUAGE LANG_RUSSIAN, 1
 STRINGTABLE
 MOVEABLE PURE LOADONCALL DISCARDABLE
 BEGIN
@@ -93,13 +98,14 @@ IDS_STA_CONVEND, "Конвертирование завершено"
 IDS_STA_MATNOTEX, "Файл текстуры не существует:"
 IDS_STA_TEXCONVERT, "Конвертирование текстур из BMP в PNG:"
 IDS_STA_SPH, "Динамические текстуры. Будут отображены некорректно:"
+IDS_STA_ARCHIVEEND, "Архивирование завершено"
 END
 
-LANGUAGE LANG_FRENCH, 1
+LANGUAGE LANG_RUSSIAN, 1
 IDD_MAINDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0, 0, 260, 125
 STYLE DS_FIXEDSYS|DS_SETFONT|DS_CENTER|WS_POPUP|WS_VISIBLE|WS_SYSMENU|WS_CAPTION
 EXSTYLE WS_EX_CONTEXTHELP|WS_EX_ACCEPTFILES
-CAPTION "dxPmdxConverter 1.0"
+CAPTION "dxPmdxConverter 1.1"
 FONT 8, "Ms Shell Dlg"
 BEGIN
   CONTROL "На входе:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,7,35,8
@@ -108,7 +114,8 @@ BEGIN
   CONTROL "Формат:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,5,25,30,8
   CONTROL "OBJ",IDC_RADIOOBJ,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,40,25,27,8
   CONTROL "MQO",IDC_RADIOMQO,"BUTTON",BS_AUTORADIOBUTTON|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,70,25,27,8
-  CONTROL "Текстуры BMP->PNG",IDC_TEXCONVERT,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,105,25,82,8
+  CONTROL "BMP->PNG",IDC_TEXCONVERT,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,105,25,48,8
+  CONTROL "TGZ",IDC_DOARCHIVE,"BUTTON",BS_AUTOCHECKBOX|BS_LEFT|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,162,25,28,8
   CONTROL "",IDC_COMBOPREC,"COMBOBOX",CBS_DROPDOWNLIST|WS_CHILD|WS_TABSTOP|WS_VISIBLE ,230,23,24,13
   CONTROL "Точность:",IDC_STATIC,"STATIC",SS_LEFT|WS_CHILD|WS_GROUP|WS_VISIBLE ,193,25,34,8
   CONTROL "",IDC_PROGRESSBAR,"msctls_progress32",WS_CHILD|WS_VISIBLE ,5,39,194,16
@@ -116,8 +123,8 @@ BEGIN
   CONTROL "",IDC_LOGRICH,"RichEdit",WS_CHILD|WS_BORDER|WS_VSCROLL|WS_TABSTOP|WS_VISIBLE|0x844,5,59,250,61
 END
 
-LANGUAGE LANG_FRENCH, 1
-IDD_ABOUTDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0, 0, 189, 129
+LANGUAGE LANG_RUSSIAN, 1
+IDD_ABOUTDIALOG DIALOG MOVEABLE PURE LOADONCALL DISCARDABLE 0, 0, 189, 151
 STYLE DS_FIXEDSYS |DS_SETFONT |DS_MODALFRAME |DS_CENTER |WS_POPUP |WS_VISIBLE |WS_SYSMENU |WS_CAPTION
 CAPTION "О программе"
 FONT 8, "Ms Shell Dlg"
@@ -127,11 +134,13 @@ BEGIN
   CONTROL "Icon",IDC_ICONPIC,"STATIC",SS_REALSIZEIMAGE |SS_CENTERIMAGE |SS_ICON |WS_CHILD |WS_VISIBLE ,5,8,32,32
   CONTROL "Автор: Храбров Дмитрий a.k.a. DeXPeriX",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,25,140,8
   CONTROL "https://github.com/DeXP/dxPmdxConverter",IDC_GITLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,43,36,140,8
-  CONTROL "В: Когда включать 'Текстуры BMP->PNG'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,52,177,8
-  CONTROL "A: Когда есть проблемы с прозрачностью.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,63,177,8
-  CONTROL "Q: Что такое 'Точность'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,79,177,8
-  CONTROL "A: Количество знаков после запятой.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,89,177,8
-  CONTROL "Сделано специально для:",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,105,125,8
-  CONTROL "http://OneMangaDay.dexp.in/tutorials/",IDC_TUTLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,114,125,8
-  CONTROL "OK",IDC_AOKBUT,"BUTTON",BS_DEFPUSHBUTTON |BS_VCENTER |BS_CENTER |WS_CHILD |WS_TABSTOP |WS_VISIBLE ,135,110,50,14
+  CONTROL "В: Когда включать конвертирование 'BMP->PNG'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,52,177,8
+  CONTROL "A: Когда есть проблемы с прозрачностью текстур.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,63,177,8
+  CONTROL "Q: Что такое 'TGZ'? Архиватор результата?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,79,177,8
+  CONTROL "A: Tar.gz архив. Может быть открыт 7-Zip и т.д.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,89,177,8
+  CONTROL "Q: Что такое 'Точность'?",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,105,177,8
+  CONTROL "A: Количество знаков после запятой.",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,115,177,8
+  CONTROL "Сделано специально для:",IDC_STATIC,"STATIC",SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,131,125,8
+  CONTROL "http://OneMangaDay.dexp.in/tutorials/",IDC_TUTLINK,"STATIC",SS_NOTIFY |SS_LEFT |WS_CHILD |WS_GROUP |WS_VISIBLE ,5,141,125,8
+  CONTROL "OK",IDC_AOKBUT,"BUTTON",BS_DEFPUSHBUTTON |BS_VCENTER |BS_CENTER |WS_CHILD |WS_TABSTOP |WS_VISIBLE ,135,131,50,14
 END
